# Algorythms_hw2

./: CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  ci.yml  solver_main.cpp  tests_gauss.cpp
.github/workflows/: ci.yml
